// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. an error 1`] = `null`;

exports[`2. an article with no headline falls back to use shortheadline 1`] = `
<article>
  <div>
    <Ad
      contextUrl="https://url.io"
      section="Some Section"
      slotName="header"
    />
  </div>
  <div>
    <div>
      <div>
        <h1
          aria-level="1"
          role="heading"
        >
          Some Short Headline
        </h1>
      </div>
    </div>
    <div>
      <div>
        <div>
          <span>
            <DatePublication
              date="2015-03-13T18:54:58.000Z"
              publication="TIMES"
            />
          </span>
        </div>
      </div>
    </div>
    <div />
    <div>
      <p>
        Some content
      </p>
      <aside
        id="related-articles"
      />
      <ArticleComments
        articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
      />
    </div>
  </div>
</article>
`;

exports[`3. an article with ads 1`] = `
<article>
  <div>
    <Ad
      contextUrl="https://url.io"
      section="Some Section"
      slotName="header"
    />
  </div>
  <div>
    <div>
      <div>
        <h1
          aria-level="1"
          role="heading"
        >
          Some Headline
        </h1>
      </div>
    </div>
    <div>
      <div>
        <div>
          <span>
            <DatePublication
              date="2015-03-13T18:54:58.000Z"
              publication="TIMES"
            />
          </span>
        </div>
      </div>
    </div>
    <div />
    <div>
      <Ad
        contextUrl="https://url.io"
        section="Some Section"
        slotName="inline-ad"
      />
      <aside
        id="related-articles"
      />
      <ArticleComments
        articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
      />
    </div>
  </div>
</article>
`;
